--- a/app/src/main/res/values/main_settings.xml
+++ b/app/src/main/res/values/main_settings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string-array name="main_settings" translatable="false">
-        <item>Form Management</item>
-        <item>General Settings</item>
-        <item>Admin Settings</item>
-        <item>Map/Theme Settings</item>
+        <item>@string/menu_setting_form</item>
+        <item>@string/menu_setting_general</item>
+        <item>@string/menu_setting_admin</item>
+        <item>@string/menu_setting_theme</item>
     </string-array>
 </resources>
